; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_mclex.c_mc_add_keyword_ascii.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_mclex.c_mc_add_keyword_ascii.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i8*, i32, i8*)* @mc_add_keyword_ascii to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mc_add_keyword_ascii(i8* %0, i32 %1, i8* %2, i32 %3, i8* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  store i32* null, i32** %12, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load i32, i32* @CP_ACP, align 4
  %16 = call i32 @unicode_from_codepage(i32* %13, i32** %11, i8* %14, i32 %15)
  %17 = load i8*, i8** %10, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %23

19:                                               ; preds = %5
  %20 = load i8*, i8** %10, align 8
  %21 = load i32, i32* @CP_ACP, align 4
  %22 = call i32 @unicode_from_codepage(i32* %13, i32** %12, i8* %20, i32 %21)
  br label %23

23:                                               ; preds = %19, %5
  %24 = load i32*, i32** %11, align 8
  %25 = load i32, i32* %7, align 4
  %26 = load i8*, i8** %8, align 8
  %27 = load i32, i32* %9, align 4
  %28 = load i32*, i32** %12, align 8
  %29 = call i32 @mc_add_keyword(i32* %24, i32 %25, i8* %26, i32 %27, i32* %28)
  ret void
}

declare dso_local i32 @unicode_from_codepage(i32*, i32**, i8*, i32) #1

declare dso_local i32 @mc_add_keyword(i32*, i32, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
